<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/hint_user_tilt"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/textColorHint"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/user_field_rub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_field"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/rub_input"
        android:inputType="textPersonName"
        android:textColor="@color/textColorHint"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_field_rub"
        android:layout_marginHorizontal="130sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/main_btn" />

    <TextView
        android:id="@+id/result_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_button"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        android:textColor="@color/textColorHint"
        android:textSize="25sp" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_info"
        android:layout_marginHorizontal="130sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currency_recycler"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_below="@+id/result_info"
        android:layout_marginTop="80dp"
        android:orientation="vertical" />

</RelativeLayout>